# async-nbt

./: Cargo.toml  README.md
benches/: all.rs
examples/: io.rs  nbt_compound.rs  serde.rs  snbt.rs
macros/src/: gen.rs
src/: io.rs  lib.rs  raw.rs
src/serde/: de.rs  mod.rs
tests/: io.rs  snbt.rs
tests/assets/: mod.rs
